Componente cita terapia y swagger
